docs/upbound-provider-aws/1.6/cloudfront/v1beta1/realtimeLogConfig.md
---
permalink: /upbound-provider-aws/1.6/cloudfront/v1beta1/realtimeLogConfig/
---

# cloudfront.v1beta1.realtimeLogConfig

"RealtimeLogConfig is the Schema for the RealtimeLogConfigs API. Provides a CloudFront real-time log configuration resource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withEndpoint(endpoint)`](#fn-specforproviderwithendpoint)
    * [`fn withEndpointMixin(endpoint)`](#fn-specforproviderwithendpointmixin)
    * [`fn withFields(fields)`](#fn-specforproviderwithfields)
    * [`fn withFieldsMixin(fields)`](#fn-specforproviderwithfieldsmixin)
    * [`fn withName(name)`](#fn-specforproviderwithname)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withSamplingRate(samplingRate)`](#fn-specforproviderwithsamplingrate)
    * [`obj spec.forProvider.endpoint`](#obj-specforproviderendpoint)
      * [`fn withKinesisStreamConfig(kinesisStreamConfig)`](#fn-specforproviderendpointwithkinesisstreamconfig)
      * [`fn withKinesisStreamConfigMixin(kinesisStreamConfig)`](#fn-specforproviderendpointwithkinesisstreamconfigmixin)
      * [`fn withStreamType(streamType)`](#fn-specforproviderendpointwithstreamtype)
      * [`obj spec.forProvider.endpoint.kinesisStreamConfig`](#obj-specforproviderendpointkinesisstreamconfig)
        * [`fn withRoleArn(roleArn)`](#fn-specforproviderendpointkinesisstreamconfigwithrolearn)
        * [`fn withStreamArn(streamArn)`](#fn-specforproviderendpointkinesisstreamconfigwithstreamarn)
        * [`obj spec.forProvider.endpoint.kinesisStreamConfig.roleArnRef`](#obj-specforproviderendpointkinesisstreamconfigrolearnref)
          * [`fn withName(name)`](#fn-specforproviderendpointkinesisstreamconfigrolearnrefwithname)
          * [`obj spec.forProvider.endpoint.kinesisStreamConfig.roleArnRef.policy`](#obj-specforproviderendpointkinesisstreamconfigrolearnrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderendpointkinesisstreamconfigrolearnrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderendpointkinesisstreamconfigrolearnrefpolicywithresolve)
        * [`obj spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector`](#obj-specforproviderendpointkinesisstreamconfigrolearnselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderendpointkinesisstreamconfigrolearnselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderendpointkinesisstreamconfigrolearnselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderendpointkinesisstreamconfigrolearnselectorwithmatchlabelsmixin)
          * [`obj spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector.policy`](#obj-specforproviderendpointkinesisstreamconfigrolearnselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderendpointkinesisstreamconfigrolearnselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderendpointkinesisstreamconfigrolearnselectorpolicywithresolve)
        * [`obj spec.forProvider.endpoint.kinesisStreamConfig.streamArnRef`](#obj-specforproviderendpointkinesisstreamconfigstreamarnref)
          * [`fn withName(name)`](#fn-specforproviderendpointkinesisstreamconfigstreamarnrefwithname)
          * [`obj spec.forProvider.endpoint.kinesisStreamConfig.streamArnRef.policy`](#obj-specforproviderendpointkinesisstreamconfigstreamarnrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderendpointkinesisstreamconfigstreamarnrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderendpointkinesisstreamconfigstreamarnrefpolicywithresolve)
        * [`obj spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector`](#obj-specforproviderendpointkinesisstreamconfigstreamarnselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderendpointkinesisstreamconfigstreamarnselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderendpointkinesisstreamconfigstreamarnselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderendpointkinesisstreamconfigstreamarnselectorwithmatchlabelsmixin)
          * [`obj spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector.policy`](#obj-specforproviderendpointkinesisstreamconfigstreamarnselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderendpointkinesisstreamconfigstreamarnselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderendpointkinesisstreamconfigstreamarnselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withEndpoint(endpoint)`](#fn-specinitproviderwithendpoint)
    * [`fn withEndpointMixin(endpoint)`](#fn-specinitproviderwithendpointmixin)
    * [`fn withFields(fields)`](#fn-specinitproviderwithfields)
    * [`fn withFieldsMixin(fields)`](#fn-specinitproviderwithfieldsmixin)
    * [`fn withName(name)`](#fn-specinitproviderwithname)
    * [`fn withSamplingRate(samplingRate)`](#fn-specinitproviderwithsamplingrate)
    * [`obj spec.initProvider.endpoint`](#obj-specinitproviderendpoint)
      * [`fn withKinesisStreamConfig(kinesisStreamConfig)`](#fn-specinitproviderendpointwithkinesisstreamconfig)
      * [`fn withKinesisStreamConfigMixin(kinesisStreamConfig)`](#fn-specinitproviderendpointwithkinesisstreamconfigmixin)
      * [`fn withStreamType(streamType)`](#fn-specinitproviderendpointwithstreamtype)
      * [`obj spec.initProvider.endpoint.kinesisStreamConfig`](#obj-specinitproviderendpointkinesisstreamconfig)
        * [`fn withRoleArn(roleArn)`](#fn-specinitproviderendpointkinesisstreamconfigwithrolearn)
        * [`fn withStreamArn(streamArn)`](#fn-specinitproviderendpointkinesisstreamconfigwithstreamarn)
        * [`obj spec.initProvider.endpoint.kinesisStreamConfig.roleArnRef`](#obj-specinitproviderendpointkinesisstreamconfigrolearnref)
          * [`fn withName(name)`](#fn-specinitproviderendpointkinesisstreamconfigrolearnrefwithname)
          * [`obj spec.initProvider.endpoint.kinesisStreamConfig.roleArnRef.policy`](#obj-specinitproviderendpointkinesisstreamconfigrolearnrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderendpointkinesisstreamconfigrolearnrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderendpointkinesisstreamconfigrolearnrefpolicywithresolve)
        * [`obj spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector`](#obj-specinitproviderendpointkinesisstreamconfigrolearnselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderendpointkinesisstreamconfigrolearnselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderendpointkinesisstreamconfigrolearnselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderendpointkinesisstreamconfigrolearnselectorwithmatchlabelsmixin)
          * [`obj spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector.policy`](#obj-specinitproviderendpointkinesisstreamconfigrolearnselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderendpointkinesisstreamconfigrolearnselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderendpointkinesisstreamconfigrolearnselectorpolicywithresolve)
        * [`obj spec.initProvider.endpoint.kinesisStreamConfig.streamArnRef`](#obj-specinitproviderendpointkinesisstreamconfigstreamarnref)
          * [`fn withName(name)`](#fn-specinitproviderendpointkinesisstreamconfigstreamarnrefwithname)
          * [`obj spec.initProvider.endpoint.kinesisStreamConfig.streamArnRef.policy`](#obj-specinitproviderendpointkinesisstreamconfigstreamarnrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderendpointkinesisstreamconfigstreamarnrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderendpointkinesisstreamconfigstreamarnrefpolicywithresolve)
        * [`obj spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector`](#obj-specinitproviderendpointkinesisstreamconfigstreamarnselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderendpointkinesisstreamconfigstreamarnselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderendpointkinesisstreamconfigstreamarnselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderendpointkinesisstreamconfigstreamarnselectorwithmatchlabelsmixin)
          * [`obj spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector.policy`](#obj-specinitproviderendpointkinesisstreamconfigstreamarnselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderendpointkinesisstreamconfigstreamarnselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderendpointkinesisstreamconfigstreamarnselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of RealtimeLogConfig

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"RealtimeLogConfigSpec defines the desired state of RealtimeLogConfig"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withEndpoint

```ts
withEndpoint(endpoint)
```

"The Amazon Kinesis data streams where real-time log data is sent."

### fn spec.forProvider.withEndpointMixin

```ts
withEndpointMixin(endpoint)
```

"The Amazon Kinesis data streams where real-time log data is sent."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withFields

```ts
withFields(fields)
```

"The fields that are included in each real-time log record. See the AWS documentation for supported values."

### fn spec.forProvider.withFieldsMixin

```ts
withFieldsMixin(fields)
```

"The fields that are included in each real-time log record. See the AWS documentation for supported values."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withName

```ts
withName(name)
```

"The unique name to identify this real-time log configuration."

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

### fn spec.forProvider.withSamplingRate

```ts
withSamplingRate(samplingRate)
```

"The sampling rate for this real-time log configuration. The sampling rate determines the percentage of viewer requests that are represented in the real-time log data. An integer between 1 and 100, inclusive."

## obj spec.forProvider.endpoint

"The Amazon Kinesis data streams where real-time log data is sent."

### fn spec.forProvider.endpoint.withKinesisStreamConfig

```ts
withKinesisStreamConfig(kinesisStreamConfig)
```

"The Amazon Kinesis data stream configuration."

### fn spec.forProvider.endpoint.withKinesisStreamConfigMixin

```ts
withKinesisStreamConfigMixin(kinesisStreamConfig)
```

"The Amazon Kinesis data stream configuration."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.endpoint.withStreamType

```ts
withStreamType(streamType)
```

"The type of data stream where real-time log data is sent. The only valid value is Kinesis."

## obj spec.forProvider.endpoint.kinesisStreamConfig

"The Amazon Kinesis data stream configuration."

### fn spec.forProvider.endpoint.kinesisStreamConfig.withRoleArn

```ts
withRoleArn(roleArn)
```

"The ARN of an IAM role that CloudFront can use to send real-time log data to the Kinesis data stream.\nSee the AWS documentation for more information."

### fn spec.forProvider.endpoint.kinesisStreamConfig.withStreamArn

```ts
withStreamArn(streamArn)
```

"The ARN of the Kinesis data stream."

## obj spec.forProvider.endpoint.kinesisStreamConfig.roleArnRef

"Reference to a Role in iam to populate roleArn."

### fn spec.forProvider.endpoint.kinesisStreamConfig.roleArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.endpoint.kinesisStreamConfig.roleArnRef.policy

"Policies for referencing."

### fn spec.forProvider.endpoint.kinesisStreamConfig.roleArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.endpoint.kinesisStreamConfig.roleArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector

"Selector for a Role in iam to populate roleArn."

### fn spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector.policy

"Policies for selection."

### fn spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.endpoint.kinesisStreamConfig.roleArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.endpoint.kinesisStreamConfig.streamArnRef

"Reference to a Stream in kinesis to populate streamArn."

### fn spec.forProvider.endpoint.kinesisStreamConfig.streamArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.endpoint.kinesisStreamConfig.streamArnRef.policy

"Policies for referencing."

### fn spec.forProvider.endpoint.kinesisStreamConfig.streamArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.endpoint.kinesisStreamConfig.streamArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector

"Selector for a Stream in kinesis to populate streamArn."

### fn spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector.policy

"Policies for selection."

### fn spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.endpoint.kinesisStreamConfig.streamArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withEndpoint

```ts
withEndpoint(endpoint)
```

"The Amazon Kinesis data streams where real-time log data is sent."

### fn spec.initProvider.withEndpointMixin

```ts
withEndpointMixin(endpoint)
```

"The Amazon Kinesis data streams where real-time log data is sent."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withFields

```ts
withFields(fields)
```

"The fields that are included in each real-time log record. See the AWS documentation for supported values."

### fn spec.initProvider.withFieldsMixin

```ts
withFieldsMixin(fields)
```

"The fields that are included in each real-time log record. See the AWS documentation for supported values."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withName

```ts
withName(name)
```

"The unique name to identify this real-time log configuration."

### fn spec.initProvider.withSamplingRate

```ts
withSamplingRate(samplingRate)
```

"The sampling rate for this real-time log configuration. The sampling rate determines the percentage of viewer requests that are represented in the real-time log data. An integer between 1 and 100, inclusive."

## obj spec.initProvider.endpoint

"The Amazon Kinesis data streams where real-time log data is sent."

### fn spec.initProvider.endpoint.withKinesisStreamConfig

```ts
withKinesisStreamConfig(kinesisStreamConfig)
```

"The Amazon Kinesis data stream configuration."

### fn spec.initProvider.endpoint.withKinesisStreamConfigMixin

```ts
withKinesisStreamConfigMixin(kinesisStreamConfig)
```

"The Amazon Kinesis data stream configuration."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.endpoint.withStreamType

```ts
withStreamType(streamType)
```

"The type of data stream where real-time log data is sent. The only valid value is Kinesis."

## obj spec.initProvider.endpoint.kinesisStreamConfig

"The Amazon Kinesis data stream configuration."

### fn spec.initProvider.endpoint.kinesisStreamConfig.withRoleArn

```ts
withRoleArn(roleArn)
```

"The ARN of an IAM role that CloudFront can use to send real-time log data to the Kinesis data stream.\nSee the AWS documentation for more information."

### fn spec.initProvider.endpoint.kinesisStreamConfig.withStreamArn

```ts
withStreamArn(streamArn)
```

"The ARN of the Kinesis data stream."

## obj spec.initProvider.endpoint.kinesisStreamConfig.roleArnRef

"Reference to a Role in iam to populate roleArn."

### fn spec.initProvider.endpoint.kinesisStreamConfig.roleArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.endpoint.kinesisStreamConfig.roleArnRef.policy

"Policies for referencing."

### fn spec.initProvider.endpoint.kinesisStreamConfig.roleArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.endpoint.kinesisStreamConfig.roleArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector

"Selector for a Role in iam to populate roleArn."

### fn spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector.policy

"Policies for selection."

### fn spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.endpoint.kinesisStreamConfig.roleArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.endpoint.kinesisStreamConfig.streamArnRef

"Reference to a Stream in kinesis to populate streamArn."

### fn spec.initProvider.endpoint.kinesisStreamConfig.streamArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.endpoint.kinesisStreamConfig.streamArnRef.policy

"Policies for referencing."

### fn spec.initProvider.endpoint.kinesisStreamConfig.streamArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.endpoint.kinesisStreamConfig.streamArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector

"Selector for a Stream in kinesis to populate streamArn."

### fn spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector.policy

"Policies for selection."

### fn spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.endpoint.kinesisStreamConfig.streamArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."